[gd_scene load_steps=14 format=2]

[ext_resource path="res://lightbulb.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/lightbulb.png" type="Texture" id=2]
[ext_resource path="res://Assets/Animations/electricity1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Animations/electricity2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Animations/electricity3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Animations/electricity4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/electricity5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=8]
[ext_resource path="res://Assets/SFX/electricity_1.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), null ],
"loop": true,
"name": "spark",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.10803, 44.958 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 53.85
gravity = Vector3( -50, 0, 0 )
initial_velocity = 42.74
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0, 1, 0.929412, 1 )
hue_variation = 0.02
hue_variation_random = 0.98

[sub_resource type="Animation" id=4]
resource_name = "spark"
tracks/0/type = "value"
tracks/0/path = NodePath("lightbulblight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 2.0, 0.01, 2.0, 0.01, 2.0, 0.01, 2.0, 0.01, 2.0, 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lighting:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 1.0, 0.01, 1.0, 0.01, 1.0, 0.01, 1.0, 0.01, 1.0, 0.01 ]
}

[node name="lightbulb" type="Area2D"]
z_index = -1
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="animation" type="AnimatedSprite" parent="sprite"]
show_behind_parent = true
position = Vector2( -0.475662, 38.0522 )
z_as_relative = false
frames = SubResource( 1 )
animation = "spark"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 37 )
shape = SubResource( 2 )
disabled = true

[node name="particles" type="Particles2D" parent="."]
position = Vector2( 0, 81.4494 )
rotation = -1.5082
emitting = false
lifetime = 0.5
process_material = SubResource( 3 )

[node name="lightbulblight" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="lighting" type="Light2D" parent="."]
position = Vector2( 0, 40 )
scale = Vector2( 0.3, 2 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/spark = SubResource( 4 )

[node name="start_delay" type="Timer" parent="."]
one_shot = true

[node name="electricity" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 1.24
max_distance = 500.0
attenuation = 0.784584

[connection signal="body_entered" from="." to="." method="_on_lightbulb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="start_delay" to="." method="_on_start_delay_timeout"]
